logs/reporter.err.log
  File "/Users/jacklicatamacbook/DailyAccomplishments/scripts/generate_daily_json.py", line 90
    <<<<<<< HEAD
    ^
IndentationError: expected an indented block
